# esp32_GardedManagement

./: .gitignore  README.md  package-lock.json  package.json
deploy/: .env.example  README.md  docker-compose.mosquitto.yml  docker-compose.yml  sn.txt
deploy/mosquitto/: mosquitto.conf
deploy/nginx/: default.conf
docs/: mvp-implementation.md
docs/superpowers/plans/: 2026-07-06-device-screen-ui.md  2026-07-06-real-camera-mjpeg.md
docs/superpowers/specs/: 2026-07-06-device-screen-ui-design.md
firmware/nursery-device/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/nursery-device/components/esp32_p4_wifi6_touch_lcd_4_3/: CMakeLists.txt  Kconfig  esp32_p4_wifi6_touch_lcd_4_3.c  idf_component.yml
firmware/nursery-device/main/: CMakeLists.txt  app_main.c  idf_component.yml  nursery_camera.c  nursery_camera.h  nursery_config.c  nursery_config.h  nursery_irrigation.c  nursery_irrigation.h  nursery_mqtt.c  nursery_mqtt.h  nursery_ui.c  nursery_ui.h  nursery_ui_font.c  nursery_wifi.c  nursery_wifi.h
services/api/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
services/api/prisma/: schema.prisma
services/api/src/: app-state.ts  app.module.ts  main.ts
services/api/src/admin/: admin.controller.ts
services/api/src/auth/: auth.controller.ts  security.ts
services/api/test/: devices-controller.test.ts  management-features.test.ts  mqtt-status.test.ts  mvp-domain.test.ts  persistence.test.ts
web/portal/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
web/portal/test/: dashboard.test.tsx  login.test.tsx
(+27 files in other folders)
